--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Carl Cortright</title>
     <script src="https://unpkg.com/arweave/bundles/web.bundle.js"></script>
     <script>
-    window.location.href = 'https://arweave.net/Tu8u0Di5cEMbjsZtUypXUBa1jPgKXBpJSuccPdf-PA4';
+    window.location.href = 'https://carl.fun';
     // const arweave = Arweave.init();
     // arweave.arql({
     //     op: "and",
